fix user button options and heading alignment

--- a/menu-app/src/App.css
+++ b/menu-app/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.back .btn {
+  border-radius: 20px;
+  padding: 0px 10px;
+  font-size: 20px;
+  box-shadow: 0 1px 2px gray;
+  margin-top: 15px;
+}
+
+.dining_hall {
+  margin-top: 15px;
+  color: rgb(221, 154, 30);
+  text-align: left;
+  margin-left: 60px;
+}
